syntax = "proto3";
package userservice;

message User {
  string name = 2;
  string email = 3;
  string password = 4;
}

message UserResponse {
  string id = 1;
  string message = 2;
}


service UserService {
  rpc CreateUser (User) returns (UserResponse) {};
  rpc AuthUser (AuthUserRequest) returns (AuthUserResponse) {};
}

message Empty {}

message AuthUserRequest {
  string email = 1;
  string password = 2;
}

message AuthUserResponse {
  bool status = 1;
  string message = 2;
}